--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Miary is a beautiful diary and journal web application",
   "main": "app.js",
   "scripts": {
+     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Souradip Nath",
