--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Miary is a beautiful diary and journal web application",
   "main": "app.js",
   "scripts": {
-     "start": "nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Souradip Nath",
@@ -15,6 +15,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.8",
+    "nodemon": "^2.0.5",
     "random-quote-generator": "^1.2.2"
   }
 }
